fix: fix css overflow settings

--- a/css/main.scss
+++ b/css/main.scss
@@ -151,8 +151,8 @@ body::after {
   background-color: white;
   display: flex;
   flex-direction: column;
-
-
+  border-right: 1px solid #e0e0e0;
+  overflow: hidden;
 
   .main_user_photo_wrapper {
     width: 40px;
@@ -341,6 +341,7 @@ body::after {
   flex-direction: column;
   flex-grow: 1;
   background-color: rgb(250, 250, 250);
+  overflow: hidden;
 
   .chat_wrapper {
     position: relative;
